Fixed whitespace gap.

--- a/src/App.css
+++ b/src/App.css
@@ -75,6 +75,10 @@ code {
   min-height: 90vh;
 }
 
+.min-height-100vh{
+  min-height: 100vh;
+}
+
 .flex-wrap{
   flex-wrap: wrap;
 }
